# Dian_QQ_Bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  API_Documentation.md  CHANGELOG_SUMMARY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  FRONTEND_CHECK_REPORT.md  ISSUE_CHECK_REPORT.md  OPTIMIZATION_SUMMARY.md  README.md  docker-compose.windows.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.bak
.github/workflows/: ci.yml
backend/: .env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: database.py  main.py
backend/app/api/v1/: auth.py  dependencies.py  images.py  instances.py  setup.py  system.py
backend/app/core/: config.py  db_config_manager.py  exceptions.py
backend/app/managers/: base.py  napcat.py
backend/app/models/: db_models.py  instance.py  settings.py  user.py
backend/app/services/: __init__.py  auth_service.py  image_service.py  instance_service.py  setup_service.py
backend/app/utils/: docker_socket.py  docker_utils.py  jwt.py  security.py
docs/: AUTH_API.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCKER_OPTIMIZATION_PLAN.md
frontend/: .dockerignore  .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css
scripts/: deploy.bat  deploy.sh  start.bat  start.sh  stop.sh
scripts/docker/: start.sh
tests/: conftest.py  test_auth.py  test_image_workflow.py  test_security_hardening.py  test_setup_flow.py
(+27 files in other folders)
